24 Jul 2018
fix: save image to path store_image()
fix: get backgrounds when url is empty function_bluray.php
fix: unquoted key send_message.php

23 Jul 2018
fix: remove dd($url) from function_tmdb.php
update: add try/catch to fetch()
fix: typo in newsrss.php
update: cleanup_manager.php replace edit/delete icons
update: Image Proxy to use fetch()
fix: function_bluray.php missing requires
add: Newsrss cleanup to remove news entries older than 30 days
update: only post newest nrewrss item when starting for the first time
fix: newsrss initial cache
fix: gifs no longer optimized on the fly by image proxy
fix: display no friends when friends list is empty userdetails.php
add: missing Avatar toggle in user blocks, currently only used in userdetails.php
fix: bbcode image class 
fix: typo in dragndrop.js

22 Jul 2018
fix: view_mailbox.php breaking template
fix: log_viewer.php not displaying all files correctly
fix: incorrect use of $cache->add
update: only show block in user_blocks if block is enabled by site
remove: redundant columns from users table
fix: bitwise for opt2
remove: imacss and postcss-font-base64

21 Jul 2018
update: bitbucket.php using ajax drag and drop
remove: incorrect method parameter stdhead()
remove: avatar path from bitbucket

20 Jul 2018
cleanup: formatting, alignment, replace join with implode

19 Jul 2018
fix: youtube link on upload
update: database files
add: php-cs-fixer and postcss to uglify.php
add: auto download torrent after upload
fix: typo in function_tvmaze.php
fix: trivia results on index page not showing scrollbar
update: log vierer better messages splitting
fix: direct link to post button
fix: latest comments poster not using url_proxy
fix: removal of background

18 Jul 2018
update: database files
add: latest torrents slider using flexslider and torrent banners

17 Jul 2018
fix: background image not 100% width
fix: bluray releases getting incorrect imdbid

16 Jul 2018
add: bluray.com new releases page