@@ -2200,6 +2200,8 @@ function insert_update_ip()
 
 function fetch($url)
 {
+    global $site_config;
+
     $client = new GuzzleHttp\Client([
         'curl' => [
             CURLOPT_SSL_VERIFYPEER => false,
@@ -2211,9 +2213,6 @@ function fetch($url)
             'User-Agent' => 'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/44.0.2403.157 Safari/537.36',
         ],
         'verify' => false,
-        'connect_timeout' => 10,
-        'read_timeout' => 10,
-        'timeout' => 10,
     ]);
     try {
         if ($res = $client->request('GET', $url)) {
